--- a/calendar.html
+++ b/calendar.html
@@ -6,10 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Calendar</title>
+    <style>
+        .calendar {
+            display: grid;
+            row-gap: 20px;
+            column-gap: 20px;
+            grid-template-columns: repeat(7, 1fr);
+            grid-template-rows: 30px repeat(5, 75px);
+        }
+
+        .date,
+        .day {
+            background-color: rgb(193, 238, 255);
+            font-size: 2em;
+            border-radius: 7px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .other-month,
+        .day {
+            background-color: lightgray;
+        }
+
+        .day {
+            font-size: 1.5em;
+        }
+    </style>
 </head>
 
 <body>
     <div class="calendar">
+        <div class="day">S</div>
+        <div class="day">M</div>
+        <div class="day">T</div>
+        <div class="day">W</div>
+        <div class="day">T</div>
+        <div class="day">F</div>
+        <div class="day">S</div>
+        <div class="date other-month">30</div>
+        <div class="date other-month">31</div>
         <div class="date">1</div>
         <div class="date">2</div>
         <div class="date">3</div>
@@ -40,11 +77,9 @@
         <div class="date">28</div>
         <div class="date">29</div>
         <div class="date">30</div>
-        <div class="date">31</div>
-        <div class="date">32</div>
-        <div class="date">33</div>
-        <div class="date">34</div>
-        <div class="date">35</div>
+        <div class="date other-month">1</div>
+        <div class="date other-month">2</div>
+        <div class="date other-month">3</div>
     </div>
 </body>
 
