--- a/media-query.html
+++ b/media-query.html
@@ -31,9 +31,36 @@
             }
         }
 
-        @media screen and (min-width: 577px) and (max-width: 992px) {
+        @media screen and (min-width: 577px) and (max-width: 800px) {
             .container {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(4, 1fr);
+            }
+        }
+
+        @media screen and (min-width: 801px) and (max-width: 1000px) {
+            .container {
+                grid-template-columns: repeat(1, 1fr);
+            }
+
+            .food {
+                background-color: lightgreen;
+                border: 0;
+                margin: 0 100px;
+            }
+
+            .food img {
+                width: 50%;
+                margin: 50%;
+            }
+
+            .food button {
+                background-color: crimson;
+                color: antiquewhite;
+                border: 0;
+                border-radius: 5px;
+                font-size: 18px;
+                padding: 10px 20px;
+                margin: 50%;
             }
         }
     </style>
